# libdeflate

./: .travis.yml  CMakeLists.txt  Makefile  README.md
programs/: CMakeLists.txt  config.h.in
scripts/: checksum_benchmarks.sh  exec_tests.sh  run_tests.sh
